package logic.building.base;

public abstract class Building {
     public String url1;

     public abstract String getUrl();
     public abstract String toString();

}
