package logic.building.base;

public interface Damageable {

}
