package logic.building.base;

public interface Demolishable {

}
