package logic.building.base;

public abstract class School extends Building{
    public static int genMul = 1;
    public static int maintainCost = 50;

}
